# silly-joy

./: .travis.yml  Dockerfile  Makefile  README.md  repl.expect  silly-joy.cabal  stack.yaml
.github/workflows/: build-test-push.yaml  tests.yaml
app/: Main.hs
src/: Lib.hs  Meaning.hs  Parser.hs  Runner.hs  UI.hs
test/: Main.hs  Spec.hs
