name:                silly-joy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/silly-joy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , containers >= 0.5.7.1
                     , extensible-effects >= 1.11.1.0
  ghc-options:         -Wall
  default-language:    Haskell2010

executable silly-joy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , silly-joy
  default-language:    Haskell2010

test-suite silly-joy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
  build-depends:       base
                     , silly-joy
                     , tasty >= 0.11.2.3
                     , tasty-hspec >= 1.1.3.2
                     , tasty-discover >= 3.0.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/silly-joy
