name:                silly-joy
version:             0.0.1
homepage:            https://github.com/rootmos/silly-joy#readme
license:             BSD3
license-file:        LICENSE
author:              Gustav Behm
maintainer:          gustav.behm@gmail.com
copyright:           2017 Gustav Behm
category:            language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Meaning, Runner, UI
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , containers >= 0.5.7.1
                     , extensible-effects >= 1.11.1.0
                     , natural-transformation >= 0.4
                     , brick >= 0.17.2
                     , haskeline
                     , vty >= 5.15.1
                     , directory >= 1.3.0.0
  ghc-options:         -Wall
  default-language:    Haskell2010

executable silly-joy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , silly-joy
                     , optparse-applicative >=  0.13.2.0
  ghc-options:         -optl-static -fPIC
  default-language:    Haskell2010

test-suite silly-joy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , silly-joy
                     , hspec >= 2.4.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rootmos/silly-joy
